Defined Header structure

--- a/index.html
+++ b/index.html
@@ -18,9 +18,21 @@
         <!-- Monsterrat -->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@700&display=swap" rel="stylesheet">
         <!-- Ubuntu -->
-        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
+    
 </head>
 <body>
+
+    <header>
+        <h1>Meet our Team</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit enim nulla cum dolores. 
+            Repudiandae aspernatur ullam repellendus blanditiis doloremque recusandae velit dolores qui, 
+            harum fugit iste quae totam voluptatem neque.</p>
+    </header>
+
+    <main>
+
+    </main>
     
 </body>
 </html>
