Defined first Cards Strcuture

--- a/index.html
+++ b/index.html
@@ -31,7 +31,20 @@
     </header>
 
     <main>
+        <section class="cards-column">
+            <div class="card-item"></div>
+            <div class="card-item"></div>
+        </section>
 
+        <section class="cards-column">
+            <div class="card-item"></div>
+            <div class="card-item"></div>    
+        </section>
+
+        <section class="cards-column">
+            <div class="card-item"></div>
+            <div class="card-item"></div>    
+        </section>
     </main>
     
 </body>
