Hotfix redefined classes for main content

--- a/index.html
+++ b/index.html
@@ -30,21 +30,23 @@
             harum fugit iste quae totam voluptatem neque.</p>
     </header>
 
-    <main>
+    <main class="main-content clearfix">
+
         <section class="cards-column">
-            <div class="card-item"></div>
-            <div class="card-item"></div>
+          <h2>Column 1</h2>
+          <p>Some text..</p>
+        </section>
+        
+        <section class="cards-column">
+          <h2>Column 2</h2>
+          <p>Some text..</p>
         </section>
 
         <section class="cards-column">
-            <div class="card-item"></div>
-            <div class="card-item"></div>    
+          <h2>Column 3</h2>
+          <p>Some text..</p>
         </section>
 
-        <section class="cards-column">
-            <div class="card-item"></div>
-            <div class="card-item"></div>    
-        </section>
     </main>
     
 </body>
