Added Card Containers

--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
     <main class="main-content clearfix">
 
         <section class="cards-column">
-          <h2>Column 1</h2>
-          <p>Some text..</p>
-        </section>
-        
-        <section class="cards-column">
-          <h2>Column 2</h2>
-          <p>Some text..</p>
+          <div class="card-item"></div>
+          <div class="card-item"></div>
         </section>
 
         <section class="cards-column">
-          <h2>Column 3</h2>
-          <p>Some text..</p>
+          <div class="card-item"></div>
+          <div class="card-item"></div>
+        </section>
+
+        <section class="cards-column">
+          <div class="card-item"></div>
+          <div class="card-item"></div>
         </section>
 
     </main>
