Added images profiles

--- a/index.html
+++ b/index.html
@@ -33,18 +33,30 @@
     <main class="main-content clearfix">
 
         <section class="cards-column">
-          <div class="card-item"></div>
-          <div class="card-item"></div>
+          <div class="card-item">
+            <img src="assets/img/male1.png" alt="" class="clearfix">
+          </div>
+          <div class="card-item">
+            <img src="assets/img/female2.png" alt="" class="clearfix">
+          </div>
         </section>
 
         <section class="cards-column">
-          <div class="card-item"></div>
-          <div class="card-item"></div>
+          <div class="card-item">
+            <img src="assets/img/female1.png" alt="" class="clearfix">
+          </div>
+          <div class="card-item">
+            <img src="assets/img/male3.png" alt="" class="clearfix">
+          </div>
         </section>
 
         <section class="cards-column">
-          <div class="card-item"></div>
-          <div class="card-item"></div>
+          <div class="card-item">
+            <img src="assets/img/male2.png" alt="" class="clearfix">
+          </div>
+          <div class="card-item">
+            <img src="assets/img/female3.png" alt="" class="clearfix">
+          </div>
         </section>
 
     </main>
