Defined alt images

--- a/index.html
+++ b/index.html
@@ -34,28 +34,28 @@
 
         <section class="cards-column">
           <div class="card-item">
-            <img src="assets/img/male1.png" alt="" class="clearfix">
+            <img src="assets/img/male1.png" alt="Marco Bianchi" class="clearfix">
           </div>
           <div class="card-item">
-            <img src="assets/img/female2.png" alt="" class="clearfix">
-          </div>
-        </section>
-
-        <section class="cards-column">
-          <div class="card-item">
-            <img src="assets/img/female1.png" alt="" class="clearfix">
-          </div>
-          <div class="card-item">
-            <img src="assets/img/male3.png" alt="" class="clearfix">
+            <img src="assets/img/female2.png" alt="Marta Ipsum" class="clearfix">
           </div>
         </section>
 
         <section class="cards-column">
           <div class="card-item">
-            <img src="assets/img/male2.png" alt="" class="clearfix">
+            <img src="assets/img/female1.png" alt="Laura Rossi" class="clearfix">
           </div>
           <div class="card-item">
-            <img src="assets/img/female3.png" alt="" class="clearfix">
+            <img src="assets/img/male3.png" alt="Roberto Lorem" class="clearfix">
+          </div>
+        </section>
+
+        <section class="cards-column">
+          <div class="card-item">
+            <img src="assets/img/male2.png" alt="Giorgio Verdi" class="clearfix">
+          </div>
+          <div class="card-item">
+            <img src="assets/img/female3.png" alt="Daniela Amet" class="clearfix">
           </div>
         </section>
 
