--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 <body>
 
+    <!-- Header Page Begin -->
     <header>
         <h1>Meet our Team</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit enim nulla cum dolores. 
@@ -30,6 +31,7 @@
             harum fugit iste quae totam voluptatem neque.</p>
     </header>
 
+    <!-- Cards Team List -->
     <main class="main-content clearfix">
 
         <section class="cards-column">
