Added cards infos

--- a/index.html
+++ b/index.html
@@ -37,27 +37,60 @@
         <section class="cards-column">
           <div class="card-item">
             <img src="assets/img/male1.png" alt="Marco Bianchi" class="clearfix">
+
+            <!-- Item Content Infos -->
+            <h3 class="card-title">Marco Bianchi</h3>
+            <span class="card-profession-info">Designer</span>
+            <a href="#" class="mail-link">marcobianchi@team.com</a>
           </div>
+
           <div class="card-item">
             <img src="assets/img/female2.png" alt="Marta Ipsum" class="clearfix">
+
+            <!-- Item Content Infos -->
+            <h3 class="card-title">Marco Bianchi</h3>
+            <span class="card-profession-info">Designer</span>
+            <a href="#" class="mail-link">marcobianchi@team.com</a>
           </div>
         </section>
 
         <section class="cards-column">
           <div class="card-item">
             <img src="assets/img/female1.png" alt="Laura Rossi" class="clearfix">
+
+            <!-- Item Content Infos -->
+            <h3 class="card-title">Marco Bianchi</h3>
+            <span class="card-profession-info">Designer</span>
+            <a href="#" class="mail-link">marcobianchi@team.com</a>
           </div>
+
           <div class="card-item">
             <img src="assets/img/male3.png" alt="Roberto Lorem" class="clearfix">
+
+            <!-- Item Content Infos -->
+            <h3 class="card-title">Marco Bianchi</h3>
+            <span class="card-profession-info">Designer</span>
+            <a href="#" class="mail-link">marcobianchi@team.com</a>
           </div>
         </section>
 
         <section class="cards-column">
           <div class="card-item">
             <img src="assets/img/male2.png" alt="Giorgio Verdi" class="clearfix">
+
+            <!-- Item Content Infos -->
+            <h3 class="card-title">Marco Bianchi</h3>
+            <span class="card-profession-info">Designer</span>
+            <a href="#" class="mail-link">marcobianchi@team.com</a>
           </div>
+
           <div class="card-item">
             <img src="assets/img/female3.png" alt="Daniela Amet" class="clearfix">
+
+            <!-- Item Content Infos -->
+            <h3 class="card-title">Marco Bianchi</h3>
+            <span class="card-profession-info">Designer</span>
+            <a href="#" class="mail-link">marcobianchi@team.com</a>
           </div>
         </section>
 
