--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <!-- Cards Team List -->
     <main class="main-content clearfix">
 
+      <!---- First Column Card Items ---->
         <section class="cards-column">
           <div class="card-item">
             <img src="assets/img/male1.png" alt="Marco Bianchi" class="clearfix">
@@ -48,49 +49,51 @@
             <img src="assets/img/female2.png" alt="Marta Ipsum" class="clearfix">
 
             <!-- Item Content Infos -->
-            <h3 class="card-title">Marco Bianchi</h3>
-            <span class="card-profession-info">Designer</span>
-            <a href="#" class="mail-link">marcobianchi@team.com</a>
+            <h3 class="card-title">Marta Ipsum</h3>
+            <span class="card-profession-info">SEO Specialist</span>
+            <a href="#" class="mail-link">martaipsum@team.com</a>
           </div>
         </section>
 
+        <!---- Middle Column Card Items ---->
         <section class="cards-column">
           <div class="card-item">
             <img src="assets/img/female1.png" alt="Laura Rossi" class="clearfix">
 
             <!-- Item Content Infos -->
-            <h3 class="card-title">Marco Bianchi</h3>
-            <span class="card-profession-info">Designer</span>
-            <a href="#" class="mail-link">marcobianchi@team.com</a>
+            <h3 class="card-title">Laura Rossi</h3>
+            <span class="card-profession-info">Front-end Developer</span>
+            <a href="#" class="mail-link">laurarossi@team.com</a>
           </div>
 
           <div class="card-item">
             <img src="assets/img/male3.png" alt="Roberto Lorem" class="clearfix">
 
             <!-- Item Content Infos -->
-            <h3 class="card-title">Marco Bianchi</h3>
-            <span class="card-profession-info">Designer</span>
-            <a href="#" class="mail-link">marcobianchi@team.com</a>
+            <h3 class="card-title">Roberto Lorem</h3>
+            <span class="card-profession-info">Project Manager</span>
+            <a href="#" class="mail-link">robertolorem@team.com</a>
           </div>
         </section>
 
+        <!---- Last Column Card Items ---->
         <section class="cards-column">
           <div class="card-item">
             <img src="assets/img/male2.png" alt="Giorgio Verdi" class="clearfix">
 
             <!-- Item Content Infos -->
-            <h3 class="card-title">Marco Bianchi</h3>
-            <span class="card-profession-info">Designer</span>
-            <a href="#" class="mail-link">marcobianchi@team.com</a>
+            <h3 class="card-title">Giorgio Verdi</h3>
+            <span class="card-profession-info">Back-end Developer</span>
+            <a href="#" class="mail-link">giorgioverdi@team.com</a>
           </div>
 
           <div class="card-item">
             <img src="assets/img/female3.png" alt="Daniela Amet" class="clearfix">
 
             <!-- Item Content Infos -->
-            <h3 class="card-title">Marco Bianchi</h3>
-            <span class="card-profession-info">Designer</span>
-            <a href="#" class="mail-link">marcobianchi@team.com</a>
+            <h3 class="card-title">Daniela Amet</h3>
+            <span class="card-profession-info">Analyst</span>
+            <a href="#" class="mail-link">danielaamet@team.com</a>
           </div>
         </section>
 
