HOTFIX added clearfix on the card item

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <!---- First Column Card Items ---->
         <section class="cards-column">
-          <div class="card-item">
+          <div class="card-item clearfix">
             <img src="assets/img/male1.png" alt="Marco Bianchi" class="clearfix">
 
             <!-- Item Content Infos -->
@@ -45,7 +45,7 @@
             <a href="#" class="mail-link">marcobianchi@team.com</a>
           </div>
 
-          <div class="card-item">
+          <div class="card-item clearfix">
             <img src="assets/img/female2.png" alt="Marta Ipsum" class="clearfix">
 
             <!-- Item Content Infos -->
@@ -57,7 +57,7 @@
 
         <!---- Middle Column Card Items ---->
         <section class="cards-column">
-          <div class="card-item">
+          <div class="card-item clearfix">
             <img src="assets/img/female1.png" alt="Laura Rossi" class="clearfix">
 
             <!-- Item Content Infos -->
@@ -66,7 +66,7 @@
             <a href="#" class="mail-link">laurarossi@team.com</a>
           </div>
 
-          <div class="card-item">
+          <div class="card-item clearfix">
             <img src="assets/img/male3.png" alt="Roberto Lorem" class="clearfix">
 
             <!-- Item Content Infos -->
@@ -78,7 +78,7 @@
 
         <!---- Last Column Card Items ---->
         <section class="cards-column">
-          <div class="card-item">
+          <div class="card-item clearfix">
             <img src="assets/img/male2.png" alt="Giorgio Verdi" class="clearfix">
 
             <!-- Item Content Infos -->
@@ -87,7 +87,7 @@
             <a href="#" class="mail-link">giorgioverdi@team.com</a>
           </div>
 
-          <div class="card-item">
+          <div class="card-item clearfix">
             <img src="assets/img/female3.png" alt="Daniela Amet" class="clearfix">
 
             <!-- Item Content Infos -->
