Added new container for card infos

--- a/index.html
+++ b/index.html
@@ -40,18 +40,22 @@
             <img src="assets/img/male1.png" alt="Marco Bianchi" class="clearfix">
 
             <!-- Item Content Infos -->
-            <h3 class="card-title">Marco Bianchi</h3>
-            <span class="card-profession-info">Designer</span>
-            <a href="#" class="mail-link">marcobianchi@team.com</a>
+            <section class="card-info-container clearfix">
+              <h3 class="card-title">Marco Bianchi</h3>
+              <span class="card-profession-info">Designer</span>
+              <a href="#" class="mail-link">marcobianchi@team.com</a>
+            </section>
           </div>
 
           <div class="card-item clearfix">
             <img src="assets/img/female2.png" alt="Marta Ipsum" class="clearfix">
 
             <!-- Item Content Infos -->
-            <h3 class="card-title">Marta Ipsum</h3>
-            <span class="card-profession-info">SEO Specialist</span>
-            <a href="#" class="mail-link">martaipsum@team.com</a>
+            <section class="card-info-container clearfix">
+              <h3 class="card-title">Marta Ipsum</h3>
+              <span class="card-profession-info">SEO Specialist</span>
+              <a href="#" class="mail-link">martaipsum@team.com</a>
+            </section>
           </div>
         </section>
 
@@ -61,18 +65,22 @@
             <img src="assets/img/female1.png" alt="Laura Rossi" class="clearfix">
 
             <!-- Item Content Infos -->
-            <h3 class="card-title">Laura Rossi</h3>
-            <span class="card-profession-info">Front-end Developer</span>
-            <a href="#" class="mail-link">laurarossi@team.com</a>
+            <section class="card-info-container clearfix">
+              <h3 class="card-title">Laura Rossi</h3>
+              <span class="card-profession-info">Front-end Developer</span>
+              <a href="#" class="mail-link">laurarossi@team.com</a>
+            </section>
           </div>
 
           <div class="card-item clearfix">
             <img src="assets/img/male3.png" alt="Roberto Lorem" class="clearfix">
 
             <!-- Item Content Infos -->
-            <h3 class="card-title">Roberto Lorem</h3>
-            <span class="card-profession-info">Project Manager</span>
-            <a href="#" class="mail-link">robertolorem@team.com</a>
+            <section class="card-info-container clearfix">
+              <h3 class="card-title">Roberto Lorem</h3>
+              <span class="card-profession-info">Project Manager</span>
+              <a href="#" class="mail-link">robertolorem@team.com</a>
+            </section>
           </div>
         </section>
 
@@ -82,18 +90,22 @@
             <img src="assets/img/male2.png" alt="Giorgio Verdi" class="clearfix">
 
             <!-- Item Content Infos -->
-            <h3 class="card-title">Giorgio Verdi</h3>
-            <span class="card-profession-info">Back-end Developer</span>
-            <a href="#" class="mail-link">giorgioverdi@team.com</a>
+            <section class="card-info-container clearfix">
+              <h3 class="card-title">Giorgio Verdi</h3>
+              <span class="card-profession-info">Back-end Developer</span>
+              <a href="#" class="mail-link">giorgioverdi@team.com</a>
+            </section>
           </div>
 
           <div class="card-item clearfix">
             <img src="assets/img/female3.png" alt="Daniela Amet" class="clearfix">
 
             <!-- Item Content Infos -->
-            <h3 class="card-title">Daniela Amet</h3>
-            <span class="card-profession-info">Analyst</span>
-            <a href="#" class="mail-link">danielaamet@team.com</a>
+            <section class="card-info-container clearfix">
+              <h3 class="card-title">Daniela Amet</h3>
+              <span class="card-profession-info">Analyst</span>
+              <a href="#" class="mail-link">danielaamet@team.com</a>
+            </section>
           </div>
         </section>
 
